[package]

name = "emojicons"
version = "0.3.2"
authors = ["Jiří Šebele <sindriava@gmail.com>"]

description = "Parse :emoji: notation to unicode representation."
repository = "https://github.com/sindriava/rust-emojicons"
readme = "README.md"
license = "MIT"

[dependencies]

regex = "0.1.10"
regex_macros = "0.1.5"
phf = "0.5.0"
phf_mac = "0.5.0"
