[package]

name = "emojicons"
version = "0.5.3"
authors = ["Jiří Šebele <sindriava@gmail.com>"]

description = "Parse :emoji: notation to unicode representation."
repository = "https://github.com/sindriava/rust-emojicons"
readme = "README.md"
license = "MIT"

[dependencies]

regex = "0.1.44"
regex_macros = "0.1.25"

phf = "0.7.10"
phf_macros = "0.7.10"
